Whoops, shoulda made a branch

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Carmel College Buses</title>                     <!-- The name that would be shown on Tabs -->
   <link rel="stylesheet" href="style.css">               <!-- Connecting to CSS document, where styling is done -->
   <link href="http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700" rel="stylesheet" type="text/css">  <!--Font -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">   <!--- The added line to make sure that responsiveness works on mobile as well--->
 </head>
 <body>
   <header>
